--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,17 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>3.0.0-M5</version>
+      <scope>runtime</scope>
+    </dependency>
 
   </dependencies>
 
