--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
     <checkstyle.skip>true</checkstyle.skip>
 
-    <endpoints.project.id>tinyinsta-295118.ew.r</endpoints.project.id>
+    <endpoints.project.id>tinyinsta-295118</endpoints.project.id>
   </properties>
   <dependencies>
     <!-- Compile/runtime dependencies -->
